subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/Switch_Valid_9.while
const Red is 1
const Blue is 2
const Green is 3

int f(int c) {
    switch(c) {
        case Red:
            return 123;
        default:
            return 456;
        case Blue:
            return 234;
    }
}

void main() {
    print "NUM: " ++ f(Red);
    print "NUM: " ++ f(Green);
    print "NUM: " ++ f(Blue);
}
