subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Break_Invalid_2.while
string foo(int x) {
    switch (x) {
        case 1:
            break;
            return "1";
        case 2:
            return "2";
        default:
            return "default";
    }
}

void main() {
    print foo(1);
}

